BUG1793 [P] Remove unnecessary horizontal scroll
(cherry picked from commit e67954b84f9689238dcb92671d3d59e21561d0fc)

--- a/src/client/src/Feature/Navigation/Header/NavigationSearch/SuggestionList/SuggestionList.scss
+++ b/src/client/src/Feature/Navigation/Header/NavigationSearch/SuggestionList/SuggestionList.scss
@@ -19,7 +19,7 @@
     justify-content: start;
     list-style: outside none none;
     max-height: calc(70vh - 70px);
-    overflow: scroll;
+    overflow-y: scroll;
   }
 
   &-NotFound {
